syntax = "proto3";

package Proto.Command.Sprints;

import "google/protobuf/timestamp.proto";

service SprintsCommandService {
  rpc AddTicketToActiveSprint (AddTicketToActiveSprintProtoCommand) returns (CommandResponse);
  rpc AddTicketToSprint (AddTicketToSprintProtoCommand) returns (CommandResponse);
  rpc CreateSprint (CreateSprintProtoCommand) returns (CommandResponse);
  rpc SetSprintActiveStatus (SetSprintActiveStatusProtoCommand) returns (CommandResponse);
  rpc UpdateSprintData (UpdateSprintDataProtoCommand) returns (CommandResponse);
}

message AddTicketToActiveSprintProtoCommand {
  string ticketId = 1;
}

message AddTicketToSprintProtoCommand {
  string sprintId = 1;
  string ticketId = 2;
}

message CreateSprintProtoCommand {
  string sprintId = 1;
  string name = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
  bool isActive = 5;
  repeated string ticketIds = 6;
}

message SetSprintActiveStatusProtoCommand {
  string sprintId = 1;
  bool isActive = 2;
}

message UpdateSprintDataProtoCommand {
  string sprintId = 1;
  string name = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
}

message CommandResponse {
  bool success = 1;
}
